--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # .circleci/config.yml
 version: 2.1
 orbs:
-  android: circleci/android@x.y.z
+  android: circleci/android@2.2.0
   # https://circleci.com/developer/orbs/orb/circleci/android for latest version
 jobs:
   test:
