--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,2 +1,10 @@
-/build
 /release
+/build/generated
+/build/intermediates
+/build/kotlin
+/build/kotlinToolingMetadata
+/build/kspCaches
+/build/reports
+/build/snapshot
+/build/tmp
+/build/ktlint.html
