--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,10 +1,10 @@
 /release
-/build/generated
-/build/intermediates
-/build/kotlin
-/build/kotlinToolingMetadata
-/build/kspCaches
-/build/reports
-/build/snapshot
-/build/tmp
-/build/ktlint.html
+build/generated
+build/intermediates
+build/kotlin
+build/kotlinToolingMetadata
+build/kspCaches
+build/reports
+build/snapshot
+build/tmp
+build/ktlint.html
