--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ baseline-profile = '1.3.0'
 firebase_bom = '31.5.0'
 hilt-testing = '2.44'
 accompanist = '0.31.0-alpha'
+truth = '1.1.3'
 
 [libraries]
 # project classpath
@@ -87,3 +88,4 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
 
 google-accompanist = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
+google-truth = { module = "com.google.truth:truth", version.ref = "truth" }
